change to Navigation Component and Fragment for adding and changing labels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="stop_button">Stop</string>
     <string name="pause_button">Pause</string>
     <string name="play_button">Play</string>
-    <string name="countdown_timer_format">%1$d:%2$d</string>
+    <string name="label_work">Work</string>
+    <string name="label_study">Study</string>
 </resources>
